--- a/lib/preambulo.tex
+++ b/lib/preambulo.tex
@@ -120,7 +120,7 @@
 \DeclareMathOperator{\seno}{\textrm{\ seno\ }}
 \DeclareMathOperator{\xreta}{\overline{\R}}
 
-\DeclareMathOperator{\menfus}{M(X, \mathcal{C} )}
+\DeclareMathOperator{\menfus}{\textit{M}(\textit{X}, \mathcal{C} )}
 
 \DeclareMathOperator{\xborel}{\overline{\borel}}
 
