--- a/elementos-textuais/considerações-finais.tex
+++ b/elementos-textuais/considerações-finais.tex
@@ -11,19 +11,19 @@
 %c) Apresentar algumas possibilidades de demonstrações para casos de aplicações da convergência de sequências de números reais no Cálculo Diferencial e Integral.
 
 \chapter{Considerações Finais}
-	Neste trabalho abordamos a teoria da medida e integração, em sua forma elementar, tendo como pergunta diretriz de que forma pode ser apresentada a teoria da medida e integração de Lebesgue de maneira elementar para os alunos de graduação de ciências exatas?
+	Neste trabalho abordamos a teoria da medida e integração, de forma simplória e resumida, tendo como pergunta diretriz de que forma pode ser apresentada a teoria da medida e integração de Lebesgue de maneira elementar para os alunos de graduação de ciências exatas?
 	Com o intuito de auxiliar na obtenção da resposta, nosso objetivo geral que nos guiou em todo processo de construção do objeto de pesquisa foi: 
-	conhecer a algumas definições e resultados da teoria da medida e da integração de Lebesgue de forma elementar.
+	conhecer algumas definições e resultados da teoria da medida e da integração de Lebesgue de forma simplificada.
 	
 	Desta forma, nosso primeiro objetivo específico era: definir a base do estudo da teoria da medida por meio dos espaços mensuráveis.
-	Para atingir esse objetivo, primeiro definimos  uma \sigal de um conjunto.
-	Em seguida, mostramos que um conjunto não vazio e uma \sigal desse conjunto formam um espaço mensurável.
+	Para atingir esse propósito, primeiro definimos  uma \sigal de um conjunto.
+	Em seguida, denotamos que um conjunto não vazio e uma \sigal desse conjunto formam um espaço mensurável.
 	Fixamos este conceito apresentando exemplos com grau crescente de abstração.
 	Provamos algumas proposições sobre espaços mensuráveis e apresentamos uma \sigal especial no conjunto dos números reais, a \sigal de Borel.
 	Fizemos um processo semelhante para expor as funções mensuráveis sendo os resultados focados em uma maneira mais fácil de averiguar se uma função é mensurável sem utilizar a definição diretamente.
 	
 	Nosso segundo objetivo específico era: conhecer a teoria da medida de maneira generalizada.
-	Para obter com sucesso esse objetivo, precisou-se estender a reta real adicionando as noções de $-\infty$ e $+\infty$ exibindo uma álgebra específica a ser adotada.
+	Para obter com sucesso esse meta, precisou-se estender a reta real adicionando as noções de $-\infty$ e $+\infty$ exibindo uma álgebra específica a ser adotada.
 	Com isso, na primeira parte da seção, generalizamos os resultados apresentados na seção anterior dando ênfase às mudanças que ocorreram ao mudar de $\R$ para $\overline{\R}$.
 	Depois disso, definimos o que é uma medida, enunciamos e provamos propriedades sobre.
 	Além disso, trouxemos vários exemplos, dentre eles, o espaço de probabilidades e a medida de um conjunto discreto.
@@ -37,10 +37,10 @@
 	Neste momento, várias ferramentas para integrais de Lebesgue para funções não negativas foram enunciadas e provadas para que esta pudesse ser generalizada para funções quaisquer.  
    	
    	Com isso, acreditamos que a forma como foi organizado este trabalho possibilita um estudo introdutório sobre a teoria da medida e integração de Lebesgue para alunos de graduação em ciências exatas em uma disciplina optativa.
-   	Essa crença surge da simplificação do texto e da teoria para que aborde coisas pontais e não tão gerais como se é esperado em um primeiro contato com a teoria. 
+   	Essa crença surge da simplificação do texto e da teoria para que aborde coisas pontuais e não tão gerais como se é esperado em um primeiro contato com a teoria. 
    	Fazemos isso, por exemplo, quando decidimos começar diretamente com a definição de $\sigma$-álgebra ao invés de iniciar com a definição de semi-anel como faz o livro Medida e Integração de Pedro Jesus Fernandez (\citeyear{pedro}), por exemplo.
    	Além disso, tratamos primeiro de funções mensuráveis para, em seguida, trabalhamos com medida o que também não é comum na bibliografia brasileira.
-   	Por mim, tentamos sempre por gráficos quando julgamos necessário o que também é escasso em livros sobre o tema por pensar em um público diferente ao que destina esse trabalho. 
+   	Por fim, tentamos sempre por gráficos quando julgamos necessário o que também é escasso em livros sobre o tema por pensar em um público diferente ao que destina esse trabalho. 
    	 
     
     
