Versão Pré Defesa Inserção da banca examinadora

--- a/documento.tex
+++ b/documento.tex
@@ -110,7 +110,7 @@
 \local{Fortaleza -- Ceará}
 
 % Exemplo: \dataaprovacao{01 de Janeiro de 2012}
-\dataaprovacao{08/06/2023}
+\dataaprovacao{11/12/2023}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%     Informação sobre o Orientador       %%
@@ -142,10 +142,10 @@
 % \membrodabancadois{Prof. Dr. Fulano de Tal}
 % \membrodabancadoisies{Universidade Estadual do Ceará - UECE}
 
-\membrodabancadois{}
+\membrodabancadois{Prof. Dr. Tiago Caúla Ribeiro}
 \membrodabancadoiscentro{Universidade Estadual do Ceará -- UECE}
 \membrodabancadoisies{}
-\membrodabancatres{}
+\membrodabancatres{Prof. Dr. Flávio Alexandre Falcão Nascimento}
 \membrodabancatrescentro{Universidade Estadual do Ceará -- UECE}
 \membrodabancatresies{}
 \membrodabancaquatro{}
