Adicionando arquivo de apresentação

--- a/elementos-textuais/espacos-funcoes-mensuraveis.tex
+++ b/elementos-textuais/espacos-funcoes-mensuraveis.tex
@@ -95,7 +95,7 @@ Será que se construirmos $Z$ um conjunto que contenha $\varnothing$ e $X$ e out
 
 %Contra Exemplo
 \begin{env}{Contraexemplo}
-    Seja $X = \{x,y,z\}$. O conjunto $\mathcal{C} = \{\varnothing, X, \{x\}, \{y\}, \{z\}\}$ não é uma \sigal de X.
+    Seja $X = \{x,y,z\}$. O conjunto $\mathcal{C} = \{\varnothing, X, \{x\}, \{y\}, \{z\}\}$ não é uma \sigal de $X$.
     Sem dúvida, $\varnothing, X \in \mathcal{C}$. 
     Entretanto, perceba que $\{x\} \in \mathcal{C}$, mas $\{x\}^c \notin \mathcal{C}$.
     De fato, 
@@ -209,6 +209,7 @@ A primeira trata de conjuntos mensuráveis de uma \sigal e a outra refere-se à 
 Além disso, perceba que até aqui trabalhamos o conceito de \sigal de maneira abstrata sendo utilizada em um conjunto qualquer. 
 Trataremos, agora, de uma \sigal extremamente importante e específica para o conjunto $\R$ dos números reais.
 
+% Álgebra de Borel
 \begin{env}{Definição}
 \label{def:algebra-borel}
     Seja $X = \R$. A Álgebra de Borel é a \sigal $\borel$ gerada por todos os intervalos abertos $(-\infty,x)$ com $ x  \in \R$. 
